# tycho-protocol-sdk

./: README.md
evm/src/fluid/: FluidAdapter.sol  FluidSwapExecutor.sol  manifest.yaml
evm/src/fluid/Interfaces/: FluidInterfaces.sol
evm/test/: FluidAdapter.t.sol
substreams/: Cargo.toml  release.sh  rustfmt.toml
substreams/ethereum-curve/: Cargo.toml
substreams/ethereum-fluid/: Cargo.toml  build.rs  ethereum-fluid.yaml  integration_test.tycho.yaml  substreams.yaml  substreams.yaml.backup
substreams/ethereum-fluid/abi/: dexReservesResolver.json  factory.json  liquidity.json  resolver.json
substreams/ethereum-fluid/proto/: v1.proto
substreams/ethereum-fluid/src/: lib.rs  modules.rs  store_key.rs
substreams/ethereum-fluid/src/abi/: dexReservesResolver.rs  factory.rs  mod.rs  storageRead.rs
substreams/ethereum-fluid/src/modules/: 0_store_keys.rs  1_map_dex_deployed.rs  2_store_dexes.rs  3_map_protocol_changes.rs  map_dex_deployed.rs  mod.rs  store_dexes.rs
substreams/ethereum-uniswap-v2/: Cargo.toml
substreams/ethereum-uniswap-v2/src/: traits.rs
substreams/ethereum-uniswap-v2/src/modules/: mod.rs
testing/: pre_build.sh
testing/src/runner/: cli.py  runner.py
