[package]
name = "ethereum-fluid"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_fluid"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
anyhow = { workspace = true, features = [] }
substreams-ethereum.workspace = true
prost.workspace = true
tycho-substreams.workspace = true
serde.workspace = true
ethabi.workspace = true
substreams-helper.workspace = true
serde_qs = "0.13.0"
sha2 = "0.10.8"
num-bigint = "0.4.4"
hex = "0.4"


[build-dependencies]
anyhow.workspace = true
substreams-ethereum.workspace = true
ethabi.workspace = true
serde.workspace = true
substreams-helper.workspace = true
serde_qs = "0.13.0"
hex = "0.4"
